fixed overflow issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,13 @@
 
 @media (min-width: 800px) {
     :root {
+        --fs-h1: 4rem;
+        --fs-st-h: 2rem;
+    }
+}
+
+@media (min-width: 1100px) {
+    :root {
         --fs-h1: 4.5rem;
         --fs-st-h: 2.375rem;
     }
@@ -344,7 +351,7 @@ strong{
     }
     
     .section-subtitle-home:before{
-        width: 130%;
+        width: 120%;
         left: -15%;
         height: 80%;
         top: -20%;
